<resources>
    <string name="app_name">Lab01Calculator</string>
    <string name="add_button_text">Add</string>
    <string name="result_label">Result:</string>
    <string name="subtract_button_text">Subtract</string>
    <string name="multiply_button_text">multiply</string>
    <string name="divide_button_text">Divide</string>
    <string name="error_text">Error</string>
    <string name="sin_a_button_text">SIN(A)</string>
    <string name="cos_a_button_text">COS(A)</string>
    <string name="sqrt_a_button_text">SQRT(A)</string>
    <string name="sqr_a_button_text">SQR(A)</string>
    <string name="tg_a_button_text">TG(A)</string>
    <string name="ctg_a_button_text">CTD(A)</string>
    <string name="A_info">A:</string>
    <string name="B_info">B:</string>
    <string name="author_string">Курчавов Алексей 204 группа СПБКИТ</string>
</resources>